chore: adjust translations

--- a/WebUI/src/assets/i18n/de.json
+++ b/WebUI/src/assets/i18n/de.json
@@ -256,6 +256,23 @@
   "SETTINGS_IMAGE_COMFY_FRAME_RATE": "Bildrate",
   "SETTINGS_IMAGE_COMFY_TOTAL_FRAMES": "Gesamtanzahl Frames",
 
+  "COM_LOAD_VIDEO": "Video laden",
+  "SETTINGS_MODEL_SD_HD_INPAINT_MODEL": "HD-Default-Inpaint/Outpaint-Modell",
+  "BACKEND_VERSION_DESCRIPTION_COMFYUI": "Geben Sie einen Git-Commit-Hash oder Versions-Tag ein (z.B. v1.2.3 oder abc1234)",
+  "BACKEND_VERSION_DESCRIPTION_LLAMACPP": "Geben Sie eine Build-Nummer ein (z.B. b6048)",
+  "BACKEND_VERSION_DESCRIPTION_OPENVINO": "Geben Sie eine Versionsnummer ein (z.B. 2025.2.0)",
+  "BACKEND_VERSION_DESCRIPTION_OLLAMA": "Geben Sie Release-Tag und Version ein",
+  "BACKEND_RELEASE_TAG": "Release-Tag",
+  "BACKEND_RELEASE_TAG_DESCRIPTION": "Geben Sie den Release-Tag ein (z.B. v2.3.0-nightly)",
+  "BACKEND_VERSION_DESCRIPTION_OLLAMA_VERSION": "Geben Sie die Versionsnummer ein (z.B. 2.3.0b20250630)",
+
+  "COM_ADD_FILE_TO_RAG": "Datei zur Liste verfügbarer Dokumente hinzufügen",
+  "COM_ADD_FILE_TO_RAG_CHECKBOX": "Datei zur/aus der Liste der Dokumente hinzufügen/entfernen, die zur Antwortgenerierung verwendet werden",
+  "COM_CHECK_ALL_FILES": "Alle Dateien zur Liste der Dokumente hinzufügen, die zur Antwortgenerierung verwendet werden",
+  "COM_UNCHECK_ALL_FILES": "Alle Dateien aus der Liste der Dokumente entfernen, die zur Antwortgenerierung verwendet werden",
+  "COM_DELETE_FILE": "Datei aus der Liste verfügbarer Dokumente entfernen",
+  "COM_DELETE_ALL_FILES": "Liste verfügbarer Dokumente leeren",
+
   "BACKEND_STOP": "Backend stoppen",
   "BACKEND_START": "Backend starten",
   "BACKEND_REINSTALL": "Backend neu installieren",
@@ -276,5 +293,31 @@
   "RAG_ADD_DOCUMENTS": "Dokumente hinzufügen",
   "RAG_ADD_FILES": "Dateien hinzufügen",
   "RAG_SEARCHABLE_DOCUMENTS": "Durchsuchbare Dokumente",
-  "RAG_CLEAR_ALL": "Alle löschen"
+  "RAG_CLEAR_ALL": "Alle löschen",
+
+  "DEMO_OK_GOT_IT": "Okay, verstanden",
+  "DEMO_CREATE_CENTER_CONTENT": "Verwandeln Sie einfache Textaufforderungen in Sekunden in atemberaubende Bilder.",
+  "DEMO_CREATE_POPUP_CONTENT_1": "Sagen Sie AI Playground, wie Ihr Bild aussehen soll. Klicken Sie dann auf die Schaltfläche \"Generieren\".",
+  "DEMO_YOU_COULD_TYPE": "Sie könnten eingeben",
+  "DEMO_CREATE_POPUP_CONTENT_3": "ein Krieger mit fließendem Haar, violettem Umhang und schwarzer Rüstung",
+  "DEMO_ENHANCE_HEADING": "Verwenden Sie KI, um Ihre Fotos mit Bearbeitungs- und Hochskalierungstools zu transformieren.",
+  "DEMO_ENHANCE_UPSCALE_TEXT": "Laden Sie Ihr gewünschtes Bild in AI Playground hoch und stellen Sie den Hochskalierungswert ein",
+  "DEMO_ENHANCE_VARIATION_TEXT": "Verwenden Sie den Variationsregler, um Kreativität zu Ihrem Bild hinzuzufügen. Sie können auch Aufforderungen eingeben, um Details zu einem Bild hinzuzufügen",
+  "DEMO_ENHANCE_IMAGE_PROMPT_TEXT": "Geben Sie Ihre Aufforderung ein, die beschreibt, wie Sie Ihr Bild stilisieren möchten",
+  "DEMO_ENHANCE_IMAGE_PROMPT_TEXT_DETAIL": "Bewegen Sie den Regler nach links, um mehr vom ursprünglichen Bild zu erhalten, oder nach rechts, um sich enger an Ihre Textaufforderung anzulehnen",
+  "DEMO_ENHANCE_INPAINT_ONE": "Wählen Sie Bereiche des Bildes aus, die mit dem Stift-Tool repariert oder ersetzt werden sollen.",
+  "DEMO_ENHANCE_INPAINT_TWO": "Geben Sie ein, was Sie im hervorgehobenen Bereich reparieren oder hinzufügen möchten.",
+  "DEMO_ENHANCE_INPAINT_THREE": "Wählen Sie Reparieren oder Füllen und verwenden Sie den Regler, um zu steuern, wie sehr das Ergebnis dem ursprünglichen Bild (links) oder Ihrer Aufforderung (rechts) ähnelt.",
+  "DEMO_ENHANCE_OUTPAINT_ONE": "Beschreiben Sie, wie Sie das Bild erweitern möchten",
+  "DEMO_ENHANCE_OUTPAINT_TWO": "Verwenden Sie die Pfeile unten, um die Richtung der Erweiterung zu wählen",
+  "DEMO_EHNAHCE_OUTPAINT_THREE": "Bewegen Sie den Regler nach links, um mehr vom ursprünglichen Bild zu erhalten, oder nach rechts, um sich enger an Ihre Textaufforderung anzulehnen.",
+  "DEMO_ANSWER_HEADING": "Generieren Sie intelligente KI-unterstützte Antworten für Forschung und Schreiben.",
+  "DEMO_ANSWER_GENERATE_TEXT": "Verwenden Sie die Antwort-Registerkarte, um nach spezifischen Informationen zu suchen, oder laden Sie Dateien hoch, um zusammengefasste Erkenntnisse zu generieren, die auf Ihre Bedürfnisse zugeschnitten sind.",
+  "DEMO_ANSWER_GENERATE_HELP_TEXT": "hilf mir beim Schreiben einer Forschungsarbeit über Katzen ...",
+  "DEMO_NEED_HELP": "Brauchen Sie Hilfe?",
+  "DEMO_ENHANCE_IMAGE_TEXT": "Geben Sie Ihre Aufforderung ein, die beschreibt, wie Sie Ihr Bild stilisieren möchten",
+  "DEMO_ENHANCE_IMAGE_TEXT_2": "Bewegen Sie den Regler nach links, um mehr vom ursprünglichen Bild zu erhalten, oder nach rechts, um sich enger an Ihre Textaufforderung anzulehnen.",
+  "DEMO_ENHANCE_OUTPAINT_TEXT": "Beschreiben Sie, wie Sie das Bild erweitern möchten.",
+  "DEMO_ENHANCE_OUTPAINT_TEXT_2": "Verwenden Sie die Pfeile unten, um die Richtung der Erweiterung zu wählen.",
+  "DEMO_ENHANCE_OUTPAINT_TEXT_3": "Bewegen Sie den Regler nach links, um mehr vom ursprünglichen Bild zu erhalten, oder nach rechts, um sich enger an Ihre Textaufforderung anzulehnen."
 }
