--- a/WebUI/src/assets/i18n/es.json
+++ b/WebUI/src/assets/i18n/es.json
@@ -256,6 +256,23 @@
   "SETTINGS_IMAGE_COMFY_FRAME_RATE": "Velocidad de fotogramas",
   "SETTINGS_IMAGE_COMFY_TOTAL_FRAMES": "Frames totales",
 
+  "COM_LOAD_VIDEO": "Cargar video",
+  "SETTINGS_MODEL_SD_HD_INPAINT_MODEL": "Modelo HD predeterminado de inpaint/outpaint",
+  "BACKEND_VERSION_DESCRIPTION_COMFYUI": "Ingrese un hash de commit de git o etiqueta de versión (ej. v1.2.3 o abc1234)",
+  "BACKEND_VERSION_DESCRIPTION_LLAMACPP": "Ingrese un número de compilación (ej. b6048)",
+  "BACKEND_VERSION_DESCRIPTION_OPENVINO": "Ingrese un número de versión (ej. 2025.2.0)",
+  "BACKEND_VERSION_DESCRIPTION_OLLAMA": "Ingrese etiqueta de lanzamiento y versión",
+  "BACKEND_RELEASE_TAG": "Etiqueta de lanzamiento",
+  "BACKEND_RELEASE_TAG_DESCRIPTION": "Ingrese la etiqueta de lanzamiento (ej. v2.3.0-nightly)",
+  "BACKEND_VERSION_DESCRIPTION_OLLAMA_VERSION": "Ingrese el número de versión (ej. 2.3.0b20250630)",
+
+  "COM_ADD_FILE_TO_RAG": "Agregar archivo a la lista de documentos disponibles",
+  "COM_ADD_FILE_TO_RAG_CHECKBOX": "Agregar/Quitar archivo a/de la lista de documentos utilizados para generar respuestas",
+  "COM_CHECK_ALL_FILES": "Agregar todos los archivos a la lista de documentos utilizados para generar respuestas",
+  "COM_UNCHECK_ALL_FILES": "Quitar todos los archivos de la lista de documentos utilizados para generar respuestas",
+  "COM_DELETE_FILE": "Eliminar archivo de la lista de documentos disponibles",
+  "COM_DELETE_ALL_FILES": "Limpiar la lista de documentos disponibles",
+
   "BACKEND_STOP": "Detener Backend",
   "BACKEND_START": "Iniciar Backend",
   "BACKEND_REINSTALL": "Reinstalar Backend",
@@ -276,5 +293,31 @@
   "RAG_ADD_DOCUMENTS": "Agregar documentos",
   "RAG_ADD_FILES": "Agregar archivos",
   "RAG_SEARCHABLE_DOCUMENTS": "Documentos buscables",
-  "RAG_CLEAR_ALL": "Borrar todo"
+  "RAG_CLEAR_ALL": "Borrar todo",
+
+  "DEMO_OK_GOT_IT": "De acuerdo, entendido",
+  "DEMO_CREATE_CENTER_CONTENT": "Convierte simples indicaciones de texto en imágenes impresionantes en segundos.",
+  "DEMO_CREATE_POPUP_CONTENT_1": "Dile a AI Playground cómo debería verse tu imagen. Luego haz clic en el botón \"Generar\".",
+  "DEMO_YOU_COULD_TYPE": "Podrías escribir",
+  "DEMO_CREATE_POPUP_CONTENT_3": "un guerrero con cabello ondulante, capa púrpura y armadura negra",
+  "DEMO_ENHANCE_HEADING": "Usa IA para transformar tus fotos con herramientas de edición y escalado.",
+  "DEMO_ENHANCE_UPSCALE_TEXT": "Sube tu imagen elegida a AI Playground y establece el valor de escalado",
+  "DEMO_ENHANCE_VARIATION_TEXT": "Usa el deslizador de variación para agregar creatividad a tu imagen. También puedes escribir indicaciones para agregar detalles a una imagen",
+  "DEMO_ENHANCE_IMAGE_PROMPT_TEXT": "Escribe tu indicación describiendo cómo te gustaría estilizar tu imagen",
+  "DEMO_ENHANCE_IMAGE_PROMPT_TEXT_DETAIL": "Mueve el deslizador hacia la izquierda para preservar más de la imagen original, o hacia la derecha para alinearse más estrechamente con tu indicación de texto",
+  "DEMO_ENHANCE_INPAINT_ONE": "Selecciona áreas de la imagen para reparar o reemplazar usando la herramienta de lápiz.",
+  "DEMO_ENHANCE_INPAINT_TWO": "Escribe lo que quieres arreglar o agregar al área resaltada.",
+  "DEMO_ENHANCE_INPAINT_THREE": "Selecciona reparar o rellenar, y usa el deslizador para controlar cuánto se parece el resultado a la imagen original (izquierda) o a tu indicación (derecha).",
+  "DEMO_ENHANCE_OUTPAINT_ONE": "Describe cómo te gustaría expandir la imagen",
+  "DEMO_ENHANCE_OUTPAINT_TWO": "Usa las flechas de abajo para elegir la dirección de la expansión",
+  "DEMO_EHNAHCE_OUTPAINT_THREE": "Mueve el deslizador hacia la izquierda para preservar más de la imagen original, o hacia la derecha para alinearse más estrechamente con tu indicación de texto.",
+  "DEMO_ANSWER_HEADING": "Genera respuestas inteligentes asistidas por IA para investigación y escritura.",
+  "DEMO_ANSWER_GENERATE_TEXT": "Usa la pestaña Respuesta para buscar información específica, o sube archivos para generar perspectivas resumidas adaptadas a tus necesidades.",
+  "DEMO_ANSWER_GENERATE_HELP_TEXT": "ayúdame a escribir un trabajo de investigación sobre gatos ...",
+  "DEMO_NEED_HELP": "¿Necesitas ayuda?",
+  "DEMO_ENHANCE_IMAGE_TEXT": "Escribe tu indicación describiendo cómo te gustaría estilizar tu imagen",
+  "DEMO_ENHANCE_IMAGE_TEXT_2": "Mueve el deslizador hacia la izquierda para preservar más de la imagen original, o hacia la derecha para alinearse más estrechamente con tu indicación de texto.",
+  "DEMO_ENHANCE_OUTPAINT_TEXT": "Describe cómo te gustaría expandir la imagen.",
+  "DEMO_ENHANCE_OUTPAINT_TEXT_2": "Usa las flechas de abajo para elegir la dirección de la expansión.",
+  "DEMO_ENHANCE_OUTPAINT_TEXT_3": "Mueve el deslizador hacia la izquierda para preservar más de la imagen original, o hacia la derecha para alinearse más estrechamente con tu indicación de texto."
 }
