--- a/WebUI/src/assets/i18n/id.json
+++ b/WebUI/src/assets/i18n/id.json
@@ -255,6 +255,24 @@
   "SETTINGS_IMAGE_COMFY_CHECKPOINT_MODEL": "Model Checkpoint",
   "SETTINGS_IMAGE_COMFY_FRAME_RATE": "Frame Rate",
   "SETTINGS_IMAGE_COMFY_TOTAL_FRAMES": "Total Frame",
+
+  "COM_LOAD_VIDEO": "Muat Video",
+  "SETTINGS_MODEL_SD_HD_INPAINT_MODEL": "Model Inpaint/OutPaint Default HD",
+  "BACKEND_VERSION_DESCRIPTION_COMFYUI": "Masukkan hash commit git atau tag versi (mis. v1.2.3 atau abc1234)",
+  "BACKEND_VERSION_DESCRIPTION_LLAMACPP": "Masukkan nomor build (mis. b6048)",
+  "BACKEND_VERSION_DESCRIPTION_OPENVINO": "Masukkan nomor versi (mis. 2025.2.0)",
+  "BACKEND_VERSION_DESCRIPTION_OLLAMA": "Masukkan tag rilis dan versi",
+  "BACKEND_RELEASE_TAG": "Tag Rilis",
+  "BACKEND_RELEASE_TAG_DESCRIPTION": "Masukkan tag rilis (mis. v2.3.0-nightly)",
+  "BACKEND_VERSION_DESCRIPTION_OLLAMA_VERSION": "Masukkan nomor versi (mis. 2.3.0b20250630)",
+
+  "COM_ADD_FILE_TO_RAG": "Tambahkan file ke daftar dokumen yang tersedia",
+  "COM_ADD_FILE_TO_RAG_CHECKBOX": "Tambahkan/Hapus file ke/dari daftar dokumen yang digunakan untuk menghasilkan jawaban",
+  "COM_CHECK_ALL_FILES": "Tambahkan semua file ke daftar dokumen yang digunakan untuk menghasilkan jawaban",
+  "COM_UNCHECK_ALL_FILES": "Hapus semua file dari daftar dokumen yang digunakan untuk menghasilkan jawaban",
+  "COM_DELETE_FILE": "Hapus file dari daftar dokumen yang tersedia",
+  "COM_DELETE_ALL_FILES": "Kosongkan daftar dokumen yang tersedia",
+
   "ANSWER_MAX_TOKENS": "Token Maksimum",
   "ANSWER_METRICS": "Metrik",
   "ANSWER_FONT_SIZE": "Ukuran Font",
@@ -265,6 +283,32 @@
   "RAG_ADD_FILES": "Tambahkan File",
   "RAG_SEARCHABLE_DOCUMENTS": "Dokumen yang Dapat Dicari",
   "RAG_CLEAR_ALL": "Hapus Semua",
+
+  "DEMO_OK_GOT_IT": "Oke, mengerti",
+  "DEMO_CREATE_CENTER_CONTENT": "Ubah prompt teks sederhana menjadi gambar menakjubkan dalam hitungan detik.",
+  "DEMO_CREATE_POPUP_CONTENT_1": "Beri tahu AI Playground seperti apa gambar Anda seharusnya. Kemudian klik tombol \"Generate\".",
+  "DEMO_YOU_COULD_TYPE": "Anda bisa mengetik",
+  "DEMO_CREATE_POPUP_CONTENT_3": "seorang pejuang dengan rambut mengalir, jubah ungu dan baju besi hitam",
+  "DEMO_ENHANCE_HEADING": "Gunakan AI untuk mengubah foto Anda dengan alat pengeditan dan peningkatan skala.",
+  "DEMO_ENHANCE_UPSCALE_TEXT": "Unggah gambar pilihan Anda ke AI Playground dan atur nilai peningkatan skala",
+  "DEMO_ENHANCE_VARIATION_TEXT": "Gunakan slider variasi untuk menambahkan kreativitas pada gambar Anda. Anda juga dapat mengetik prompt untuk menambahkan detail pada gambar",
+  "DEMO_ENHANCE_IMAGE_PROMPT_TEXT": "Ketik prompt Anda yang menjelaskan bagaimana Anda ingin menata gambar Anda",
+  "DEMO_ENHANCE_IMAGE_PROMPT_TEXT_DETAIL": "Gerakkan slider ke kiri untuk mempertahankan lebih banyak gambar asli, atau ke kanan untuk lebih selaras dengan prompt teks Anda",
+  "DEMO_ENHANCE_INPAINT_ONE": "Pilih area gambar untuk diperbaiki atau diganti menggunakan alat pena.",
+  "DEMO_ENHANCE_INPAINT_TWO": "Ketik apa yang ingin Anda perbaiki atau tambahkan ke area yang disorot.",
+  "DEMO_ENHANCE_INPAINT_THREE": "Pilih perbaiki atau isi, dan gunakan slider untuk mengontrol seberapa mirip hasilnya dengan gambar asli (kiri) atau prompt Anda (kanan).",
+  "DEMO_ENHANCE_OUTPAINT_ONE": "Jelaskan bagaimana Anda ingin memperluas gambar",
+  "DEMO_ENHANCE_OUTPAINT_TWO": "Gunakan panah di bawah untuk memilih arah perluasan",
+  "DEMO_EHNAHCE_OUTPAINT_THREE": "Gerakkan slider ke kiri untuk mempertahankan lebih banyak gambar asli, atau ke kanan untuk lebih selaras dengan prompt teks Anda.",
+  "DEMO_ANSWER_HEADING": "Hasilkan jawaban cerdas yang dibantu AI untuk penelitian dan penulisan.",
+  "DEMO_ANSWER_GENERATE_TEXT": "Gunakan Tab Jawaban untuk mencari informasi spesifik, atau unggah file untuk menghasilkan wawasan yang dirangkum sesuai kebutuhan Anda.",
+  "DEMO_ANSWER_GENERATE_HELP_TEXT": "bantu saya menulis makalah penelitian tentang kucing ...",
+  "DEMO_NEED_HELP": "Butuh bantuan?",
+  "DEMO_ENHANCE_IMAGE_TEXT": "Ketik prompt Anda yang menjelaskan bagaimana Anda ingin menata gambar Anda",
+  "DEMO_ENHANCE_IMAGE_TEXT_2": "Gerakkan slider ke kiri untuk mempertahankan lebih banyak gambar asli, atau ke kanan untuk lebih selaras dengan prompt teks Anda.",
+  "DEMO_ENHANCE_OUTPAINT_TEXT": "Jelaskan bagaimana Anda ingin memperluas gambar.",
+  "DEMO_ENHANCE_OUTPAINT_TEXT_2": "Gunakan panah di bawah untuk memilih arah perluasan.",
+  "DEMO_ENHANCE_OUTPAINT_TEXT_3": "Gerakkan slider ke kiri untuk mempertahankan lebih banyak gambar asli, atau ke kanan untuk lebih selaras dengan prompt teks Anda.",
 
   "BACKEND_STOP": "Hentikan Backend",
   "BACKEND_START": "Mulai Backend",
