--- a/WebUI/src/assets/i18n/it.json
+++ b/WebUI/src/assets/i18n/it.json
@@ -255,6 +255,24 @@
   "SETTINGS_IMAGE_COMFY_CHECKPOINT_MODEL": "Modello checkpoint",
   "SETTINGS_IMAGE_COMFY_FRAME_RATE": "Frequenza fotogrammi",
   "SETTINGS_IMAGE_COMFY_TOTAL_FRAMES": "Fotogrammi totali",
+
+  "COM_LOAD_VIDEO": "Carica video",
+  "SETTINGS_MODEL_SD_HD_INPAINT_MODEL": "Modello inpaint/outpaint HD predefinito",
+  "BACKEND_VERSION_DESCRIPTION_COMFYUI": "Inserisci un hash di commit git o tag di versione (es. v1.2.3 o abc1234)",
+  "BACKEND_VERSION_DESCRIPTION_LLAMACPP": "Inserisci un numero di build (es. b6048)",
+  "BACKEND_VERSION_DESCRIPTION_OPENVINO": "Inserisci un numero di versione (es. 2025.2.0)",
+  "BACKEND_VERSION_DESCRIPTION_OLLAMA": "Inserisci tag di rilascio e versione",
+  "BACKEND_RELEASE_TAG": "Tag di Rilascio",
+  "BACKEND_RELEASE_TAG_DESCRIPTION": "Inserisci il tag di rilascio (es. v2.3.0-nightly)",
+  "BACKEND_VERSION_DESCRIPTION_OLLAMA_VERSION": "Inserisci il numero di versione (es. 2.3.0b20250630)",
+
+  "COM_ADD_FILE_TO_RAG": "Aggiungi file alla lista dei documenti disponibili",
+  "COM_ADD_FILE_TO_RAG_CHECKBOX": "Aggiungi/Rimuovi file alla/dalla lista dei documenti utilizzati per generare risposte",
+  "COM_CHECK_ALL_FILES": "Aggiungi tutti i file alla lista dei documenti utilizzati per generare risposte",
+  "COM_UNCHECK_ALL_FILES": "Rimuovi tutti i file dalla lista dei documenti utilizzati per generare risposte",
+  "COM_DELETE_FILE": "Rimuovi file dalla lista dei documenti disponibili",
+  "COM_DELETE_ALL_FILES": "Svuota la lista dei documenti disponibili",
+
   "ANSWER_MAX_TOKENS": "Token Massimi",
   "ANSWER_METRICS": "Metriche",
   "ANSWER_FONT_SIZE": "Dimensione del Carattere",
@@ -265,6 +283,32 @@
   "RAG_ADD_FILES": "Aggiungi File",
   "RAG_SEARCHABLE_DOCUMENTS": "Documenti Ricercabili",
   "RAG_CLEAR_ALL": "Cancella Tutto",
+
+  "DEMO_OK_GOT_IT": "Ok, capito",
+  "DEMO_CREATE_CENTER_CONTENT": "Trasforma semplici prompt di testo in immagini straordinarie in pochi secondi.",
+  "DEMO_CREATE_POPUP_CONTENT_1": "Dì ad AI Playground come dovrebbe apparire la tua immagine. Poi clicca il pulsante \"Genera\".",
+  "DEMO_YOU_COULD_TYPE": "Potresti scrivere",
+  "DEMO_CREATE_POPUP_CONTENT_3": "un guerriero con capelli fluenti, mantello viola e armatura nera",
+  "DEMO_ENHANCE_HEADING": "Usa l'IA per trasformare le tue foto con strumenti di editing e upscaling.",
+  "DEMO_ENHANCE_UPSCALE_TEXT": "Carica la tua immagine scelta in AI Playground e imposta il valore di upscaling",
+  "DEMO_ENHANCE_VARIATION_TEXT": "Usa il cursore di variazione per aggiungere creatività alla tua immagine. Puoi anche digitare prompt per aggiungere dettagli a un'immagine",
+  "DEMO_ENHANCE_IMAGE_PROMPT_TEXT": "Digita il tuo prompt descrivendo come vorresti stilizzare la tua immagine",
+  "DEMO_ENHANCE_IMAGE_PROMPT_TEXT_DETAIL": "Sposta il cursore a sinistra per preservare di più dell'immagine originale, o a destra per allinearti più strettamente al tuo prompt di testo",
+  "DEMO_ENHANCE_INPAINT_ONE": "Seleziona aree dell'immagine da riparare o sostituire usando lo strumento penna.",
+  "DEMO_ENHANCE_INPAINT_TWO": "Digita cosa vuoi riparare o aggiungere all'area evidenziata.",
+  "DEMO_ENHANCE_INPAINT_THREE": "Seleziona ripara o riempi, e usa il cursore per controllare quanto il risultato assomiglia all'immagine originale (sinistra) o al tuo prompt (destra).",
+  "DEMO_ENHANCE_OUTPAINT_ONE": "Descrivi come vorresti espandere l'immagine",
+  "DEMO_ENHANCE_OUTPAINT_TWO": "Usa le frecce sotto per scegliere la direzione dell'espansione",
+  "DEMO_EHNAHCE_OUTPAINT_THREE": "Sposta il cursore a sinistra per preservare di più dell'immagine originale, o a destra per allinearti più strettamente al tuo prompt di testo.",
+  "DEMO_ANSWER_HEADING": "Genera risposte intelligenti assistite dall'IA per ricerca e scrittura.",
+  "DEMO_ANSWER_GENERATE_TEXT": "Usa la scheda Risposta per cercare informazioni specifiche, o carica file per generare approfondimenti riassunti su misura per le tue esigenze.",
+  "DEMO_ANSWER_GENERATE_HELP_TEXT": "aiutami a scrivere un documento di ricerca sui gatti ...",
+  "DEMO_NEED_HELP": "Hai bisogno di aiuto?",
+  "DEMO_ENHANCE_IMAGE_TEXT": "Digita il tuo prompt descrivendo come vorresti stilizzare la tua immagine",
+  "DEMO_ENHANCE_IMAGE_TEXT_2": "Sposta il cursore a sinistra per preservare di più dell'immagine originale, o a destra per allinearti più strettamente al tuo prompt di testo.",
+  "DEMO_ENHANCE_OUTPAINT_TEXT": "Descrivi come vorresti espandere l'immagine.",
+  "DEMO_ENHANCE_OUTPAINT_TEXT_2": "Usa le frecce sotto per scegliere la direzione dell'espansione.",
+  "DEMO_ENHANCE_OUTPAINT_TEXT_3": "Sposta il cursore a sinistra per preservare di più dell'immagine originale, o a destra per allinearti più strettamente al tuo prompt di testo.",
 
   "BACKEND_STOP": "Arresta Backend",
   "BACKEND_START": "Avvia Backend",
