--- a/WebUI/src/assets/i18n/ja.json
+++ b/WebUI/src/assets/i18n/ja.json
@@ -255,6 +255,24 @@
   "SETTINGS_IMAGE_COMFY_CHECKPOINT_MODEL": "チェックポイントモデル",
   "SETTINGS_IMAGE_COMFY_FRAME_RATE": "フレームレート",
   "SETTINGS_IMAGE_COMFY_TOTAL_FRAMES": "総フレーム数",
+
+  "COM_LOAD_VIDEO": "動画を読み込む",
+  "SETTINGS_MODEL_SD_HD_INPAINT_MODEL": "HDデフォルトインペイント/アウトペイントモデル",
+  "BACKEND_VERSION_DESCRIPTION_COMFYUI": "gitコミットハッシュまたはバージョンタグを入力してください（例：v1.2.3またはabc1234）",
+  "BACKEND_VERSION_DESCRIPTION_LLAMACPP": "ビルド番号を入力してください（例：b6048）",
+  "BACKEND_VERSION_DESCRIPTION_OPENVINO": "バージョン番号を入力してください（例：2025.2.0）",
+  "BACKEND_VERSION_DESCRIPTION_OLLAMA": "リリースタグとバージョンを入力してください",
+  "BACKEND_RELEASE_TAG": "リリースタグ",
+  "BACKEND_RELEASE_TAG_DESCRIPTION": "リリースタグを入力してください（例：v2.3.0-nightly）",
+  "BACKEND_VERSION_DESCRIPTION_OLLAMA_VERSION": "バージョン番号を入力してください（例：2.3.0b20250630）",
+
+  "COM_ADD_FILE_TO_RAG": "利用可能なドキュメントのリストにファイルを追加",
+  "COM_ADD_FILE_TO_RAG_CHECKBOX": "回答生成に使用するドキュメントのリストにファイルを追加/削除",
+  "COM_CHECK_ALL_FILES": "回答生成に使用するドキュメントのリストにすべてのファイルを追加",
+  "COM_UNCHECK_ALL_FILES": "回答生成に使用するドキュメントのリストからすべてのファイルを削除",
+  "COM_DELETE_FILE": "利用可能なドキュメントのリストからファイルを削除",
+  "COM_DELETE_ALL_FILES": "利用可能なドキュメントのリストをクリア",
+
   "ANSWER_MAX_TOKENS": "最大トークン数",
   "ANSWER_METRICS": "メトリクス",
   "ANSWER_FONT_SIZE": "フォントサイズ",
@@ -265,6 +283,32 @@
   "RAG_ADD_FILES": "ファイルを追加",
   "RAG_SEARCHABLE_DOCUMENTS": "検索可能なドキュメント",
   "RAG_CLEAR_ALL": "すべてクリア",
+
+  "DEMO_OK_GOT_IT": "はい、わかりました",
+  "DEMO_CREATE_CENTER_CONTENT": "シンプルなテキストプロンプトを数秒で素晴らしい画像に変換します。",
+  "DEMO_CREATE_POPUP_CONTENT_1": "AI Playgroundに画像がどのように見えるべきかを伝えてください。次に「生成」ボタンをクリックします。",
+  "DEMO_YOU_COULD_TYPE": "次のように入力できます",
+  "DEMO_CREATE_POPUP_CONTENT_3": "流れる髪、紫のマント、黒い鎧を着た戦士",
+  "DEMO_ENHANCE_HEADING": "AIを使用して編集とアップスケーリングツールで写真を変換します。",
+  "DEMO_ENHANCE_UPSCALE_TEXT": "選択した画像をAI Playgroundにアップロードし、アップスケール値を設定します",
+  "DEMO_ENHANCE_VARIATION_TEXT": "バリエーションスライダーを使用して画像に創造性を追加します。プロンプトを入力して画像に詳細を追加することもできます",
+  "DEMO_ENHANCE_IMAGE_PROMPT_TEXT": "画像をどのようにスタイル化したいかを説明するプロンプトを入力してください",
+  "DEMO_ENHANCE_IMAGE_PROMPT_TEXT_DETAIL": "スライダーを左に動かして元の画像をより多く保持するか、右に動かしてテキストプロンプトにより密接に合わせます",
+  "DEMO_ENHANCE_INPAINT_ONE": "ペンツールを使用して修復または置換する画像の領域を選択します。",
+  "DEMO_ENHANCE_INPAINT_TWO": "ハイライトされた領域で修正または追加したいものを入力します。",
+  "DEMO_ENHANCE_INPAINT_THREE": "修復または塗りつぶしを選択し、スライダーを使用して結果が元の画像（左）またはプロンプト（右）にどの程度似ているかを制御します。",
+  "DEMO_ENHANCE_OUTPAINT_ONE": "画像をどのように拡張したいかを説明してください",
+  "DEMO_ENHANCE_OUTPAINT_TWO": "下の矢印を使用して拡張の方向を選択してください",
+  "DEMO_EHNAHCE_OUTPAINT_THREE": "スライダーを左に動かして元の画像をより多く保持するか、右に動かしてテキストプロンプトにより密接に合わせます。",
+  "DEMO_ANSWER_HEADING": "研究と執筆のためのインテリジェントなAI支援回答を生成します。",
+  "DEMO_ANSWER_GENERATE_TEXT": "回答タブを使用して特定の情報を検索するか、ファイルをアップロードしてニーズに合わせた要約された洞察を生成します。",
+  "DEMO_ANSWER_GENERATE_HELP_TEXT": "猫に関する研究論文を書くのを手伝ってください...",
+  "DEMO_NEED_HELP": "ヘルプが必要ですか？",
+  "DEMO_ENHANCE_IMAGE_TEXT": "画像をどのようにスタイル化したいかを説明するプロンプトを入力してください",
+  "DEMO_ENHANCE_IMAGE_TEXT_2": "スライダーを左に動かして元の画像をより多く保持するか、右に動かしてテキストプロンプトにより密接に合わせます。",
+  "DEMO_ENHANCE_OUTPAINT_TEXT": "画像をどのように拡張したいかを説明してください。",
+  "DEMO_ENHANCE_OUTPAINT_TEXT_2": "下の矢印を使用して拡張の方向を選択してください。",
+  "DEMO_ENHANCE_OUTPAINT_TEXT_3": "スライダーを左に動かして元の画像をより多く保持するか、右に動かしてテキストプロンプトにより密接に合わせます。",
 
   "BACKEND_STOP": "バックエンドを停止",
   "BACKEND_START": "バックエンドを開始",
