--- a/WebUI/src/assets/i18n/ko.json
+++ b/WebUI/src/assets/i18n/ko.json
@@ -255,6 +255,24 @@
   "SETTINGS_IMAGE_COMFY_CHECKPOINT_MODEL": "체크포인트 모델",
   "SETTINGS_IMAGE_COMFY_FRAME_RATE": "프레임 레이트",
   "SETTINGS_IMAGE_COMFY_TOTAL_FRAMES": "총 프레임",
+
+  "COM_LOAD_VIDEO": "비디오 로드",
+  "SETTINGS_MODEL_SD_HD_INPAINT_MODEL": "HD 기본 Inpaint/Outpaint 모델",
+  "BACKEND_VERSION_DESCRIPTION_COMFYUI": "git 커밋 해시 또는 버전 태그를 입력하세요 (예: v1.2.3 또는 abc1234)",
+  "BACKEND_VERSION_DESCRIPTION_LLAMACPP": "빌드 번호를 입력하세요 (예: b6048)",
+  "BACKEND_VERSION_DESCRIPTION_OPENVINO": "버전 번호를 입력하세요 (예: 2025.2.0)",
+  "BACKEND_VERSION_DESCRIPTION_OLLAMA": "릴리스 태그와 버전을 입력하세요",
+  "BACKEND_RELEASE_TAG": "릴리스 태그",
+  "BACKEND_RELEASE_TAG_DESCRIPTION": "릴리스 태그를 입력하세요 (예: v2.3.0-nightly)",
+  "BACKEND_VERSION_DESCRIPTION_OLLAMA_VERSION": "버전 번호를 입력하세요 (예: 2.3.0b20250630)",
+
+  "COM_ADD_FILE_TO_RAG": "사용 가능한 문서 목록에 파일 추가",
+  "COM_ADD_FILE_TO_RAG_CHECKBOX": "답변 생성에 사용되는 문서 목록에 파일 추가/제거",
+  "COM_CHECK_ALL_FILES": "답변 생성에 사용되는 문서 목록에 모든 파일 추가",
+  "COM_UNCHECK_ALL_FILES": "답변 생성에 사용되는 문서 목록에서 모든 파일 제거",
+  "COM_DELETE_FILE": "사용 가능한 문서 목록에서 파일 제거",
+  "COM_DELETE_ALL_FILES": "사용 가능한 문서 목록 지우기",
+
   "ANSWER_MAX_TOKENS": "최대 토큰 수",
   "ANSWER_METRICS": "메트릭",
   "ANSWER_FONT_SIZE": "글꼴 크기",
@@ -265,6 +283,32 @@
   "RAG_ADD_FILES": "파일 추가",
   "RAG_SEARCHABLE_DOCUMENTS": "검색 가능한 문서",
   "RAG_CLEAR_ALL": "모두 지우기",
+
+  "DEMO_OK_GOT_IT": "네, 알겠습니다",
+  "DEMO_CREATE_CENTER_CONTENT": "간단한 텍스트 프롬프트를 몇 초 만에 멋진 이미지로 변환하세요.",
+  "DEMO_CREATE_POPUP_CONTENT_1": "AI Playground에 이미지가 어떻게 보여야 하는지 알려주세요. 그런 다음 \"생성\" 버튼을 클릭하세요.",
+  "DEMO_YOU_COULD_TYPE": "다음과 같이 입력할 수 있습니다",
+  "DEMO_CREATE_POPUP_CONTENT_3": "흐르는 머리카락, 보라색 망토, 검은 갑옷을 입은 전사",
+  "DEMO_ENHANCE_HEADING": "AI를 사용하여 편집 및 업스케일링 도구로 사진을 변환하세요.",
+  "DEMO_ENHANCE_UPSCALE_TEXT": "선택한 이미지를 AI Playground에 업로드하고 업스케일 값을 설정하세요",
+  "DEMO_ENHANCE_VARIATION_TEXT": "변형 슬라이더를 사용하여 이미지에 창의성을 추가하세요. 프롬프트를 입력하여 이미지에 세부 사항을 추가할 수도 있습니다",
+  "DEMO_ENHANCE_IMAGE_PROMPT_TEXT": "이미지를 어떻게 스타일링하고 싶은지 설명하는 프롬프트를 입력하세요",
+  "DEMO_ENHANCE_IMAGE_PROMPT_TEXT_DETAIL": "슬라이더를 왼쪽으로 이동하여 원본 이미지를 더 많이 보존하거나, 오른쪽으로 이동하여 텍스트 프롬프트에 더 가깝게 맞추세요",
+  "DEMO_ENHANCE_INPAINT_ONE": "펜 도구를 사용하여 수리하거나 교체할 이미지 영역을 선택하세요.",
+  "DEMO_ENHANCE_INPAINT_TWO": "강조 표시된 영역에서 수정하거나 추가하고 싶은 것을 입력하세요.",
+  "DEMO_ENHANCE_INPAINT_THREE": "수리 또는 채우기를 선택하고, 슬라이더를 사용하여 결과가 원본 이미지(왼쪽) 또는 프롬프트(오른쪽)와 얼마나 유사한지 제어하세요.",
+  "DEMO_ENHANCE_OUTPAINT_ONE": "이미지를 어떻게 확장하고 싶은지 설명하세요",
+  "DEMO_ENHANCE_OUTPAINT_TWO": "아래 화살표를 사용하여 확장 방향을 선택하세요",
+  "DEMO_EHNAHCE_OUTPAINT_THREE": "슬라이더를 왼쪽으로 이동하여 원본 이미지를 더 많이 보존하거나, 오른쪽으로 이동하여 텍스트 프롬프트에 더 가깝게 맞추세요.",
+  "DEMO_ANSWER_HEADING": "연구 및 글쓰기를 위한 지능적인 AI 지원 답변을 생성하세요.",
+  "DEMO_ANSWER_GENERATE_TEXT": "답변 탭을 사용하여 특정 정보를 검색하거나, 파일을 업로드하여 필요에 맞는 요약된 통찰력을 생성하세요.",
+  "DEMO_ANSWER_GENERATE_HELP_TEXT": "고양이에 대한 연구 논문을 작성하는 데 도움을 주세요 ...",
+  "DEMO_NEED_HELP": "도움이 필요하신가요?",
+  "DEMO_ENHANCE_IMAGE_TEXT": "이미지를 어떻게 스타일링하고 싶은지 설명하는 프롬프트를 입력하세요",
+  "DEMO_ENHANCE_IMAGE_TEXT_2": "슬라이더를 왼쪽으로 이동하여 원본 이미지를 더 많이 보존하거나, 오른쪽으로 이동하여 텍스트 프롬프트에 더 가깝게 맞추세요.",
+  "DEMO_ENHANCE_OUTPAINT_TEXT": "이미지를 어떻게 확장하고 싶은지 설명하세요.",
+  "DEMO_ENHANCE_OUTPAINT_TEXT_2": "아래 화살표를 사용하여 확장 방향을 선택하세요.",
+  "DEMO_ENHANCE_OUTPAINT_TEXT_3": "슬라이더를 왼쪽으로 이동하여 원본 이미지를 더 많이 보존하거나, 오른쪽으로 이동하여 텍스트 프롬프트에 더 가깝게 맞추세요.",
 
   "BACKEND_STOP": "Backend 중지",
   "BACKEND_START": "Backend 시작",
