--- a/WebUI/src/assets/i18n/pl.json
+++ b/WebUI/src/assets/i18n/pl.json
@@ -255,6 +255,24 @@
   "SETTINGS_IMAGE_COMFY_CHECKPOINT_MODEL": "Model punktu kontrolnego",
   "SETTINGS_IMAGE_COMFY_FRAME_RATE": "Liczba klatek",
   "SETTINGS_IMAGE_COMFY_TOTAL_FRAMES": "Całkowita liczba klatek",
+
+  "COM_LOAD_VIDEO": "Wczytaj wideo",
+  "SETTINGS_MODEL_SD_HD_INPAINT_MODEL": "Domyślny model HD Inpaint/Outpaint",
+  "BACKEND_VERSION_DESCRIPTION_COMFYUI": "Wprowadź hash commitu git lub tag wersji (np. v1.2.3 lub abc1234)",
+  "BACKEND_VERSION_DESCRIPTION_LLAMACPP": "Wprowadź numer kompilacji (np. b6048)",
+  "BACKEND_VERSION_DESCRIPTION_OPENVINO": "Wprowadź numer wersji (np. 2025.2.0)",
+  "BACKEND_VERSION_DESCRIPTION_OLLAMA": "Wprowadź tag wydania i wersję",
+  "BACKEND_RELEASE_TAG": "Tag wydania",
+  "BACKEND_RELEASE_TAG_DESCRIPTION": "Wprowadź tag wydania (np. v2.3.0-nightly)",
+  "BACKEND_VERSION_DESCRIPTION_OLLAMA_VERSION": "Wprowadź numer wersji (np. 2.3.0b20250630)",
+
+  "COM_ADD_FILE_TO_RAG": "Dodaj plik do listy dostępnych dokumentów",
+  "COM_ADD_FILE_TO_RAG_CHECKBOX": "Dodaj/Usuń plik do/z listy dokumentów używanych do generowania odpowiedzi",
+  "COM_CHECK_ALL_FILES": "Dodaj wszystkie pliki do listy dokumentów używanych do generowania odpowiedzi",
+  "COM_UNCHECK_ALL_FILES": "Usuń wszystkie pliki z listy dokumentów używanych do generowania odpowiedzi",
+  "COM_DELETE_FILE": "Usuń plik z listy dostępnych dokumentów",
+  "COM_DELETE_ALL_FILES": "Wyczyść listę dostępnych dokumentów",
+
   "ANSWER_MAX_TOKENS": "Maksymalna liczba tokenów",
   "ANSWER_METRICS": "Metryki",
   "ANSWER_FONT_SIZE": "Rozmiar czcionki",
@@ -265,6 +283,32 @@
   "RAG_ADD_FILES": "Dodaj pliki",
   "RAG_SEARCHABLE_DOCUMENTS": "Dokumenty do przeszukania",
   "RAG_CLEAR_ALL": "Wyczyść wszystko",
+
+  "DEMO_OK_GOT_IT": "Dobrze, rozumiem",
+  "DEMO_CREATE_CENTER_CONTENT": "Przekształć proste podpowiedzi tekstowe w oszałamiające obrazy w ciągu sekund.",
+  "DEMO_CREATE_POPUP_CONTENT_1": "Powiedz AI Playground, jak powinien wyglądać Twój obraz. Następnie kliknij przycisk \"Generuj\".",
+  "DEMO_YOU_COULD_TYPE": "Możesz wpisać",
+  "DEMO_CREATE_POPUP_CONTENT_3": "wojownik z rozwianymi włosami, fioletowym płaszczem i czarną zbroją",
+  "DEMO_ENHANCE_HEADING": "Użyj AI do przekształcenia swoich zdjęć za pomocą narzędzi do edycji i skalowania.",
+  "DEMO_ENHANCE_UPSCALE_TEXT": "Prześlij wybrany obraz do AI Playground i ustaw wartość skalowania",
+  "DEMO_ENHANCE_VARIATION_TEXT": "Użyj suwaka wariacji, aby dodać kreatywności do swojego obrazu. Możesz także wpisać podpowiedzi, aby dodać szczegóły do obrazu",
+  "DEMO_ENHANCE_IMAGE_PROMPT_TEXT": "Wpisz swoją podpowiedź opisującą, jak chciałbyś wystylizować swój obraz",
+  "DEMO_ENHANCE_IMAGE_PROMPT_TEXT_DETAIL": "Przesuń suwak w lewo, aby zachować więcej z oryginalnego obrazu, lub w prawo, aby bardziej dopasować się do swojej podpowiedzi tekstowej",
+  "DEMO_ENHANCE_INPAINT_ONE": "Wybierz obszary obrazu do naprawy lub zastąpienia za pomocą narzędzia pióra.",
+  "DEMO_ENHANCE_INPAINT_TWO": "Wpisz, co chcesz naprawić lub dodać do podświetlonego obszaru.",
+  "DEMO_ENHANCE_INPAINT_THREE": "Wybierz napraw lub wypełnij i użyj suwaka, aby kontrolować, jak bardzo wynik przypomina oryginalny obraz (lewo) lub twoją podpowiedź (prawo).",
+  "DEMO_ENHANCE_OUTPAINT_ONE": "Opisz, jak chciałbyś rozszerzyć obraz",
+  "DEMO_ENHANCE_OUTPAINT_TWO": "Użyj strzałek poniżej, aby wybrać kierunek rozszerzenia",
+  "DEMO_EHNAHCE_OUTPAINT_THREE": "Przesuń suwak w lewo, aby zachować więcej z oryginalnego obrazu, lub w prawo, aby bardziej dopasować się do swojej podpowiedzi tekstowej.",
+  "DEMO_ANSWER_HEADING": "Generuj inteligentne odpowiedzi wspomagane przez AI do badań i pisania.",
+  "DEMO_ANSWER_GENERATE_TEXT": "Użyj zakładki Odpowiedź, aby wyszukać konkretne informacje, lub prześlij pliki, aby wygenerować podsumowane spostrzeżenia dostosowane do Twoich potrzeb.",
+  "DEMO_ANSWER_GENERATE_HELP_TEXT": "pomóż mi napisać pracę badawczą o kotach ...",
+  "DEMO_NEED_HELP": "Potrzebujesz pomocy?",
+  "DEMO_ENHANCE_IMAGE_TEXT": "Wpisz swoją podpowiedź opisującą, jak chciałbyś wystylizować swój obraz",
+  "DEMO_ENHANCE_IMAGE_TEXT_2": "Przesuń suwak w lewo, aby zachować więcej z oryginalnego obrazu, lub w prawo, aby bardziej dopasować się do swojej podpowiedzi tekstowej.",
+  "DEMO_ENHANCE_OUTPAINT_TEXT": "Opisz, jak chciałbyś rozszerzyć obraz.",
+  "DEMO_ENHANCE_OUTPAINT_TEXT_2": "Użyj strzałek poniżej, aby wybrać kierunek rozszerzenia.",
+  "DEMO_ENHANCE_OUTPAINT_TEXT_3": "Przesuń suwak w lewo, aby zachować więcej z oryginalnego obrazu, lub w prawo, aby bardziej dopasować się do swojej podpowiedzi tekstowej.",
 
   "BACKEND_STOP": "Zatrzymaj Backend",
   "BACKEND_START": "Uruchom Backend",
