--- a/WebUI/src/assets/i18n/th.json
+++ b/WebUI/src/assets/i18n/th.json
@@ -254,6 +254,22 @@
   "DEVICE": "อุปกรณ์",
   "SETTINGS_IMAGE_COMFY_CHECKPOINT_MODEL": "โมเดลเช็คพอยต์",
   "SETTINGS_IMAGE_COMFY_FRAME_RATE": "อัตราเฟรม",
+  "COM_LOAD_VIDEO": "โหลดวิดีโอ",
+  "SETTINGS_MODEL_SD_HD_INPAINT_MODEL": "โมเดล HD Inpaint/Outpaint เริ่มต้น",
+  "BACKEND_VERSION_DESCRIPTION_COMFYUI": "ป้อนแฮชคอมมิต git หรือแท็กเวอร์ชัน (เช่น v1.2.3 หรือ abc1234)",
+  "BACKEND_VERSION_DESCRIPTION_LLAMACPP": "ป้อนหมายเลขบิลด์ (เช่น b6048)",
+  "BACKEND_VERSION_DESCRIPTION_OPENVINO": "ป้อนหมายเลขเวอร์ชัน (เช่น 2025.2.0)",
+  "BACKEND_VERSION_DESCRIPTION_OLLAMA": "ป้อนแท็กรีลีสและเวอร์ชัน",
+  "BACKEND_RELEASE_TAG": "แท็กรีลีส",
+  "BACKEND_RELEASE_TAG_DESCRIPTION": "ป้อนแท็กรีลีส (เช่น v2.3.0-nightly)",
+  "BACKEND_VERSION_DESCRIPTION_OLLAMA_VERSION": "ป้อนหมายเลขเวอร์ชัน (เช่น 2.3.0b20250630)",
+
+  "COM_ADD_FILE_TO_RAG": "เพิ่มไฟล์ไปยังรายการเอกสารที่มีอยู่",
+  "COM_ADD_FILE_TO_RAG_CHECKBOX": "เพิ่ม/ลบไฟล์ไปยัง/จากรายการเอกสารที่ใช้สำหรับการสร้างคำตอบ",
+  "COM_CHECK_ALL_FILES": "เพิ่มไฟล์ทั้งหมดไปยังรายการเอกสารที่ใช้สำหรับการสร้างคำตอบ",
+  "COM_UNCHECK_ALL_FILES": "ลบไฟล์ทั้งหมดจากรายการเอกสารที่ใช้สำหรับการสร้างคำตอบ",
+  "COM_DELETE_FILE": "ลบไฟล์จากรายการเอกสารที่มีอยู่",
+  "COM_DELETE_ALL_FILES": "ล้างรายการเอกสารที่มีอยู่",
   "SETTINGS_IMAGE_COMFY_TOTAL_FRAMES": "จำนวนเฟรมทั้งหมด",
   "ANSWER_MAX_TOKENS": "จำนวนโทเค็นสูงสุด",
   "ANSWER_METRICS": "เมตริก",
@@ -269,6 +285,31 @@
   "BACKEND_STOP": "หยุดแบ็กเอนด์",
   "BACKEND_START": "เริ่มแบ็กเอนด์",
   "BACKEND_REINSTALL": "ติดตั้งแบ็กเอนด์ใหม่",
+  "DEMO_OK_GOT_IT": "โอเค เข้าใจแล้ว",
+  "DEMO_CREATE_CENTER_CONTENT": "เปลี่ยนข้อความธรรมดาให้เป็นภาพที่น่าทึ่งในไม่กี่วินาที",
+  "DEMO_CREATE_POPUP_CONTENT_1": "บอก AI Playground ว่าคุณต้องการให้ภาพของคุณดูเป็นอย่างไร จากนั้นคลิกปุ่ม \"สร้าง\"",
+  "DEMO_YOU_COULD_TYPE": "คุณสามารถพิมพ์",
+  "DEMO_CREATE_POPUP_CONTENT_3": "นักรบที่มีผมปลิวไสว เสื้อคลุมสีม่วง และเกราะสีดำ",
+  "DEMO_ENHANCE_HEADING": "ใช้ AI เพื่อเปลี่ยนแปลงภาพถ่ายของคุณด้วยเครื่องมือแก้ไขและปรับขนาด",
+  "DEMO_ENHANCE_UPSCALE_TEXT": "อัปโหลดภาพที่เลือกไปยัง AI Playground และตั้งค่าการปรับขนาด",
+  "DEMO_ENHANCE_VARIATION_TEXT": "ใช้แถบเลื่อนความหลากหลายเพื่อเพิ่มความคิดสร้างสรรค์ให้กับภาพของคุณ คุณยังสามารถพิมพ์คำแนะนำเพื่อเพิ่มรายละเอียดให้กับภาพได้",
+  "DEMO_ENHANCE_IMAGE_PROMPT_TEXT": "พิมพ์คำแนะนำของคุณที่อธิบายว่าคุณต้องการจัดแต่งภาพของคุณอย่างไร",
+  "DEMO_ENHANCE_IMAGE_PROMPT_TEXT_DETAIL": "เลื่อนแถบเลื่อนไปทางซ้ายเพื่อรักษาภาพต้นฉบับมากขึ้น หรือไปทางขวาเพื่อให้ตรงกับคำแนะนำข้อความของคุณมากขึ้น",
+  "DEMO_ENHANCE_INPAINT_ONE": "เลือกพื้นที่ของภาพที่จะซ่อมแซมหรือแทนที่ด้วยเครื่องมือปากกา",
+  "DEMO_ENHANCE_INPAINT_TWO": "พิมพ์สิ่งที่คุณต้องการซ่อมแซมหรือเพิ่มในพื้นที่ที่เน้น",
+  "DEMO_ENHANCE_INPAINT_THREE": "เลือกซ่อมแซมหรือเติม และใช้แถบเลื่อนเพื่อควบคุมว่าผลลัพธ์จะคล้ายกับภาพต้นฉบับ (ซ้าย) หรือคำแนะนำของคุณ (ขวา) มากแค่ไหน",
+  "DEMO_ENHANCE_OUTPAINT_ONE": "อธิบายว่าคุณต้องการขยายภาพอย่างไร",
+  "DEMO_ENHANCE_OUTPAINT_TWO": "ใช้ลูกศรด้านล่างเพื่อเลือกทิศทางการขยาย",
+  "DEMO_EHNAHCE_OUTPAINT_THREE": "เลื่อนแถบเลื่อนไปทางซ้ายเพื่อรักษาภาพต้นฉบับมากขึ้น หรือไปทางขวาเพื่อให้ตรงกับคำแนะนำข้อความของคุณมากขึ้น",
+  "DEMO_ANSWER_HEADING": "สร้างคำตอบอัจฉริยะที่ขับเคลื่อนด้วย AI สำหรับการวิจัยและการเขียน",
+  "DEMO_ANSWER_GENERATE_TEXT": "ใช้แท็บคำตอบเพื่อค้นหาข้อมูลเฉพาะ หรืออัปโหลดไฟล์เพื่อสร้างข้อมูลเชิงลึกที่สรุปแล้วซึ่งปรับแต่งตามความต้องการของคุณ",
+  "DEMO_ANSWER_GENERATE_HELP_TEXT": "ช่วยฉันเขียนงานวิจัยเกี่ยวกับแมว ...",
+  "DEMO_NEED_HELP": "ต้องการความช่วยเหลือหรือไม่?",
+  "DEMO_ENHANCE_IMAGE_TEXT": "พิมพ์คำแนะนำของคุณที่อธิบายว่าคุณต้องการจัดแต่งภาพของคุณอย่างไร",
+  "DEMO_ENHANCE_IMAGE_TEXT_2": "เลื่อนแถบเลื่อนไปทางซ้ายเพื่อรักษาภาพต้นฉบับมากขึ้น หรือไปทางขวาเพื่อให้ตรงกับคำแนะนำข้อความของคุณมากขึ้น",
+  "DEMO_ENHANCE_OUTPAINT_TEXT": "อธิบายว่าคุณต้องการขยายภาพอย่างไร",
+  "DEMO_ENHANCE_OUTPAINT_TEXT_2": "ใช้ลูกศรด้านล่างเพื่อเลือกทิศทางการขยาย",
+  "DEMO_ENHANCE_OUTPAINT_TEXT_3": "เลื่อนแถบเลื่อนไปทางซ้ายเพื่อรักษาภาพต้นฉบับมากขึ้น หรือไปทางขวาเพื่อให้ตรงกับคำแนะนำข้อความของคุณมากขึ้น",
   "BACKEND_CONFIRM": "คุณแน่ใจหรือไม่?",
   "BACKEND_REINSTALL_DESCRIPTION": "นี่จะติดตั้งแบ็กเอนด์ {backend} ใหม่ ขึ้นอยู่กับการเชื่อมต่ออินเทอร์เน็ตของคุณ อาจใช้เวลาสักครู่",
   "BACKEND_SETTINGS_TITLE": "การตั้งค่า {backend}",
