--- a/WebUI/src/assets/i18n/tr.json
+++ b/WebUI/src/assets/i18n/tr.json
@@ -254,6 +254,22 @@
   "DEVICE": "Cihaz",
   "SETTINGS_IMAGE_COMFY_CHECKPOINT_MODEL": "Kontrol Noktası Modeli",
   "SETTINGS_IMAGE_COMFY_FRAME_RATE": "Kare Hızı",
+  "COM_LOAD_VIDEO": "Video Yükle",
+  "SETTINGS_MODEL_SD_HD_INPAINT_MODEL": "Varsayılan HD Inpaint/Outpaint Modeli",
+  "BACKEND_VERSION_DESCRIPTION_COMFYUI": "Git commit hash'i veya sürüm etiketi girin (örn. v1.2.3 veya abc1234)",
+  "BACKEND_VERSION_DESCRIPTION_LLAMACPP": "Build numarası girin (örn. b6048)",
+  "BACKEND_VERSION_DESCRIPTION_OPENVINO": "Sürüm numarası girin (örn. 2025.2.0)",
+  "BACKEND_VERSION_DESCRIPTION_OLLAMA": "Release etiketi ve sürümü girin",
+  "BACKEND_RELEASE_TAG": "Release Etiketi",
+  "BACKEND_RELEASE_TAG_DESCRIPTION": "Release etiketi girin (örn. v2.3.0-nightly)",
+  "BACKEND_VERSION_DESCRIPTION_OLLAMA_VERSION": "Sürüm numarası girin (örn. 2.3.0b20250630)",
+
+  "COM_ADD_FILE_TO_RAG": "Dosyayı mevcut belgeler listesine ekle",
+  "COM_ADD_FILE_TO_RAG_CHECKBOX": "Dosyayı yanıt oluşturmak için kullanılan belgeler listesine ekle/çıkar",
+  "COM_CHECK_ALL_FILES": "Tüm dosyaları yanıt oluşturmak için kullanılan belgeler listesine ekle",
+  "COM_UNCHECK_ALL_FILES": "Tüm dosyaları yanıt oluşturmak için kullanılan belgeler listesinden çıkar",
+  "COM_DELETE_FILE": "Dosyayı mevcut belgeler listesinden sil",
+  "COM_DELETE_ALL_FILES": "Mevcut belgeler listesini temizle",
   "SETTINGS_IMAGE_COMFY_TOTAL_FRAMES": "Toplam Kare",
   "ANSWER_MAX_TOKENS": "Maksimum Jeton",
   "ANSWER_METRICS": "Metrikler",
@@ -275,5 +291,30 @@
   "BACKEND_SETTINGS_DESCRIPTION": "{backend} backend'i için ayarları yapılandırın. Değişikliklerin etkili olması için yeniden başlatma veya yeniden kurulum gerekebilir.",
   "BACKEND_VERSION": "Sürüm",
   "BACKEND_VERSION_DESCRIPTION": "Backend için kullanılacak Git referansı. Bu, bir sürüm etiketi veya commit hash'i olabilir.",
+  "DEMO_OK_GOT_IT": "Tamam, anladım",
+  "DEMO_CREATE_CENTER_CONTENT": "Basit metin istemlerini saniyeler içinde çarpıcı görsellere dönüştürün.",
+  "DEMO_CREATE_POPUP_CONTENT_1": "AI Playground'a görselinizin nasıl görünmesini istediğinizi söyleyin. Ardından \"Oluştur\" düğmesine tıklayın.",
+  "DEMO_YOU_COULD_TYPE": "Şunu yazabilirsiniz",
+  "DEMO_CREATE_POPUP_CONTENT_3": "saçları savrulan, mor pelerinli ve siyah zırhlı savaşçı",
+  "DEMO_ENHANCE_HEADING": "Fotoğraflarınızı düzenleme ve ölçeklendirme araçlarıyla dönüştürmek için AI kullanın.",
+  "DEMO_ENHANCE_UPSCALE_TEXT": "Seçilen görseli AI Playground'a yükleyin ve ölçeklendirme değerini ayarlayın",
+  "DEMO_ENHANCE_VARIATION_TEXT": "Görselinize yaratıcılık katmak için varyasyon kaydırıcısını kullanın. Ayrıca görsele detay eklemek için istemler yazabilirsiniz",
+  "DEMO_ENHANCE_IMAGE_PROMPT_TEXT": "Görselinizi nasıl stilize etmek istediğinizi açıklayan isteminizi yazın",
+  "DEMO_ENHANCE_IMAGE_PROMPT_TEXT_DETAIL": "Orijinal görselden daha fazlasını korumak için kaydırıcıyı sola, metin isteminize daha fazla uyum sağlamak için sağa kaydırın",
+  "DEMO_ENHANCE_INPAINT_ONE": "Kalem aracını kullanarak görselin onarılacak veya değiştirilecek alanlarını seçin.",
+  "DEMO_ENHANCE_INPAINT_TWO": "Vurgulanan alanda neyi onarmak veya eklemek istediğinizi yazın.",
+  "DEMO_ENHANCE_INPAINT_THREE": "Onar veya doldur seçeneğini seçin ve sonucun orijinal görsele (sol) veya isteminize (sağ) ne kadar benzeyeceğini kontrol etmek için kaydırıcıyı kullanın.",
+  "DEMO_ENHANCE_OUTPAINT_ONE": "Görseli nasıl genişletmek istediğinizi açıklayın",
+  "DEMO_ENHANCE_OUTPAINT_TWO": "Genişletme yönünü seçmek için aşağıdaki okları kullanın",
+  "DEMO_EHNAHCE_OUTPAINT_THREE": "Orijinal görselden daha fazlasını korumak için kaydırıcıyı sola, metin isteminize daha fazla uyum sağlamak için sağa kaydırın.",
+  "DEMO_ANSWER_HEADING": "Araştırma ve yazma için AI destekli akıllı yanıtlar oluşturun.",
+  "DEMO_ANSWER_GENERATE_TEXT": "Belirli bilgileri aramak için Yanıt sekmesini kullanın veya ihtiyaçlarınıza göre özelleştirilmiş özetlenmiş içgörüler oluşturmak için dosyalar yükleyin.",
+  "DEMO_ANSWER_GENERATE_HELP_TEXT": "kediler hakkında bir araştırma makalesi yazmama yardım et ...",
+  "DEMO_NEED_HELP": "Yardıma mı ihtiyacınız var?",
+  "DEMO_ENHANCE_IMAGE_TEXT": "Görselinizi nasıl stilize etmek istediğinizi açıklayan isteminizi yazın",
+  "DEMO_ENHANCE_IMAGE_TEXT_2": "Orijinal görselden daha fazlasını korumak için kaydırıcıyı sola, metin isteminize daha fazla uyum sağlamak için sağa kaydırın.",
+  "DEMO_ENHANCE_OUTPAINT_TEXT": "Görseli nasıl genişletmek istediğinizi açıklayın.",
+  "DEMO_ENHANCE_OUTPAINT_TEXT_2": "Genişletme yönünü seçmek için aşağıdaki okları kullanın.",
+  "DEMO_ENHANCE_OUTPAINT_TEXT_3": "Orijinal görselden daha fazlasını korumak için kaydırıcıyı sola, metin isteminize daha fazla uyum sağlamak için sağa kaydırın.",
   "BACKEND_SAVE_CHANGES": "Değişiklikleri Kaydet"
 }
