--- a/WebUI/src/assets/i18n/vi.json
+++ b/WebUI/src/assets/i18n/vi.json
@@ -254,6 +254,22 @@
   "DEVICE": "Thiết bị",
   "SETTINGS_IMAGE_COMFY_CHECKPOINT_MODEL": "Mô hình checkpoint",
   "SETTINGS_IMAGE_COMFY_FRAME_RATE": "Tốc độ khung hình",
+  "COM_LOAD_VIDEO": "Tải video",
+  "SETTINGS_MODEL_SD_HD_INPAINT_MODEL": "Mô hình HD Inpaint/Outpaint mặc định",
+  "BACKEND_VERSION_DESCRIPTION_COMFYUI": "Nhập hash commit git hoặc thẻ phiên bản (ví dụ: v1.2.3 hoặc abc1234)",
+  "BACKEND_VERSION_DESCRIPTION_LLAMACPP": "Nhập số build (ví dụ: b6048)",
+  "BACKEND_VERSION_DESCRIPTION_OPENVINO": "Nhập số phiên bản (ví dụ: 2025.2.0)",
+  "BACKEND_VERSION_DESCRIPTION_OLLAMA": "Nhập thẻ phát hành và phiên bản",
+  "BACKEND_RELEASE_TAG": "Thẻ phát hành",
+  "BACKEND_RELEASE_TAG_DESCRIPTION": "Nhập thẻ phát hành (ví dụ: v2.3.0-nightly)",
+  "BACKEND_VERSION_DESCRIPTION_OLLAMA_VERSION": "Nhập số phiên bản (ví dụ: 2.3.0b20250630)",
+
+  "COM_ADD_FILE_TO_RAG": "Thêm tệp vào danh sách tài liệu có sẵn",
+  "COM_ADD_FILE_TO_RAG_CHECKBOX": "Thêm/Xóa tệp vào/khỏi danh sách tài liệu được sử dụng để tạo phản hồi",
+  "COM_CHECK_ALL_FILES": "Thêm tất cả tệp vào danh sách tài liệu được sử dụng để tạo phản hồi",
+  "COM_UNCHECK_ALL_FILES": "Xóa tất cả tệp khỏi danh sách tài liệu được sử dụng để tạo phản hồi",
+  "COM_DELETE_FILE": "Xóa tệp khỏi danh sách tài liệu có sẵn",
+  "COM_DELETE_ALL_FILES": "Xóa danh sách tài liệu có sẵn",
   "SETTINGS_IMAGE_COMFY_TOTAL_FRAMES": "Tổng số khung hình",
   "ANSWER_MAX_TOKENS": "Số lượng token tối đa",
   "ANSWER_METRICS": "Chỉ số",
@@ -275,5 +291,30 @@
   "BACKEND_SETTINGS_DESCRIPTION": "Cấu hình cài đặt cho backend {backend}. Các thay đổi có thể yêu cầu khởi động lại hoặc cài đặt lại để có hiệu lực.",
   "BACKEND_VERSION": "Phiên bản",
   "BACKEND_VERSION_DESCRIPTION": "Tham chiếu Git để sử dụng cho backend. Đây có thể là thẻ phiên bản hoặc mã băm commit.",
+  "DEMO_OK_GOT_IT": "Được rồi, tôi hiểu",
+  "DEMO_CREATE_CENTER_CONTENT": "Biến đổi các lời nhắc văn bản đơn giản thành hình ảnh tuyệt đẹp trong vài giây.",
+  "DEMO_CREATE_POPUP_CONTENT_1": "Nói với AI Playground bạn muốn hình ảnh của mình trông như thế nào. Sau đó nhấp vào nút \"Tạo\".",
+  "DEMO_YOU_COULD_TYPE": "Bạn có thể gõ",
+  "DEMO_CREATE_POPUP_CONTENT_3": "chiến binh với mái tóc bay trong gió, áo choàng tím và áo giáp đen",
+  "DEMO_ENHANCE_HEADING": "Sử dụng AI để biến đổi ảnh của bạn bằng các công cụ chỉnh sửa và thu phóng.",
+  "DEMO_ENHANCE_UPSCALE_TEXT": "Tải hình ảnh đã chọn lên AI Playground và đặt giá trị thu phóng",
+  "DEMO_ENHANCE_VARIATION_TEXT": "Sử dụng thanh trượt biến thể để thêm sự sáng tạo vào hình ảnh của bạn. Bạn cũng có thể nhập lời nhắc để thêm chi tiết vào hình ảnh",
+  "DEMO_ENHANCE_IMAGE_PROMPT_TEXT": "Nhập lời nhắc của bạn mô tả cách bạn muốn tạo kiểu cho hình ảnh của mình",
+  "DEMO_ENHANCE_IMAGE_PROMPT_TEXT_DETAIL": "Trượt thanh trượt sang trái để giữ lại nhiều hơn từ hình ảnh gốc, hoặc sang phải để phù hợp hơn với lời nhắc văn bản của bạn",
+  "DEMO_ENHANCE_INPAINT_ONE": "Chọn các vùng của hình ảnh để sửa chữa hoặc thay thế bằng công cụ bút.",
+  "DEMO_ENHANCE_INPAINT_TWO": "Nhập những gì bạn muốn sửa chữa hoặc thêm vào vùng được tô sáng.",
+  "DEMO_ENHANCE_INPAINT_THREE": "Chọn sửa chữa hoặc điền và sử dụng thanh trượt để kiểm soát mức độ kết quả giống với hình ảnh gốc (trái) hoặc lời nhắc của bạn (phải).",
+  "DEMO_ENHANCE_OUTPAINT_ONE": "Mô tả cách bạn muốn mở rộng hình ảnh",
+  "DEMO_ENHANCE_OUTPAINT_TWO": "Sử dụng các mũi tên bên dưới để chọn hướng mở rộng",
+  "DEMO_EHNAHCE_OUTPAINT_THREE": "Trượt thanh trượt sang trái để giữ lại nhiều hơn từ hình ảnh gốc, hoặc sang phải để phù hợp hơn với lời nhắc văn bản của bạn.",
+  "DEMO_ANSWER_HEADING": "Tạo ra các câu trả lời thông minh được hỗ trợ bởi AI cho nghiên cứu và viết lách.",
+  "DEMO_ANSWER_GENERATE_TEXT": "Sử dụng tab Trả lời để tìm kiếm thông tin cụ thể, hoặc tải lên tệp để tạo ra những hiểu biết tóm tắt được tùy chỉnh theo nhu cầu của bạn.",
+  "DEMO_ANSWER_GENERATE_HELP_TEXT": "giúp tôi viết một bài nghiên cứu về mèo ...",
+  "DEMO_NEED_HELP": "Cần trợ giúp?",
+  "DEMO_ENHANCE_IMAGE_TEXT": "Nhập lời nhắc của bạn mô tả cách bạn muốn tạo kiểu cho hình ảnh của mình",
+  "DEMO_ENHANCE_IMAGE_TEXT_2": "Trượt thanh trượt sang trái để giữ lại nhiều hơn từ hình ảnh gốc, hoặc sang phải để phù hợp hơn với lời nhắc văn bản của bạn.",
+  "DEMO_ENHANCE_OUTPAINT_TEXT": "Mô tả cách bạn muốn mở rộng hình ảnh.",
+  "DEMO_ENHANCE_OUTPAINT_TEXT_2": "Sử dụng các mũi tên bên dưới để chọn hướng mở rộng.",
+  "DEMO_ENHANCE_OUTPAINT_TEXT_3": "Trượt thanh trượt sang trái để giữ lại nhiều hơn từ hình ảnh gốc, hoặc sang phải để phù hợp hơn với lời nhắc văn bản của bạn.",
   "BACKEND_SAVE_CHANGES": "Lưu thay đổi"
 }
