--- a/WebUI/src/assets/i18n/zh-CN.json
+++ b/WebUI/src/assets/i18n/zh-CN.json
@@ -254,6 +254,22 @@
   "DEVICE": "设备",
   "SETTINGS_IMAGE_COMFY_CHECKPOINT_MODEL": "检查点模型",
   "SETTINGS_IMAGE_COMFY_FRAME_RATE": "帧率",
+  "COM_LOAD_VIDEO": "加载视频",
+  "SETTINGS_MODEL_SD_HD_INPAINT_MODEL": "默认 HD Inpaint/Outpaint 模型",
+  "BACKEND_VERSION_DESCRIPTION_COMFYUI": "输入 git 提交哈希或版本标签（例如 v1.2.3 或 abc1234）",
+  "BACKEND_VERSION_DESCRIPTION_LLAMACPP": "输入构建编号（例如 b6048）",
+  "BACKEND_VERSION_DESCRIPTION_OPENVINO": "输入版本号（例如 2025.2.0）",
+  "BACKEND_VERSION_DESCRIPTION_OLLAMA": "输入发布标签和版本",
+  "BACKEND_RELEASE_TAG": "发布标签",
+  "BACKEND_RELEASE_TAG_DESCRIPTION": "输入发布标签（例如 v2.3.0-nightly）",
+  "BACKEND_VERSION_DESCRIPTION_OLLAMA_VERSION": "输入版本号（例如 2.3.0b20250630）",
+
+  "COM_ADD_FILE_TO_RAG": "将文件添加到可用文档列表",
+  "COM_ADD_FILE_TO_RAG_CHECKBOX": "将文件添加到/从用于生成回答的文档列表中移除",
+  "COM_CHECK_ALL_FILES": "将所有文件添加到用于生成回答的文档列表",
+  "COM_UNCHECK_ALL_FILES": "从用于生成回答的文档列表中移除所有文件",
+  "COM_DELETE_FILE": "从可用文档列表中删除文件",
+  "COM_DELETE_ALL_FILES": "清除可用文档列表",
   "SETTINGS_IMAGE_COMFY_TOTAL_FRAMES": "总帧数",
 
   "BACKEND_STOP": "停止后端",
@@ -276,5 +292,30 @@
   "RAG_ADD_DOCUMENTS": "添加文档",
   "RAG_ADD_FILES": "添加文件",
   "RAG_SEARCHABLE_DOCUMENTS": "可搜索文档",
+  "DEMO_OK_GOT_IT": "好的，我明白了",
+  "DEMO_CREATE_CENTER_CONTENT": "在几秒钟内将简单的文本提示转换为令人惊叹的视觉效果。",
+  "DEMO_CREATE_POPUP_CONTENT_1": "告诉 AI Playground 您希望图像看起来如何。然后点击\"生成\"按钮。",
+  "DEMO_YOU_COULD_TYPE": "您可以输入",
+  "DEMO_CREATE_POPUP_CONTENT_3": "头发飘逸、紫色斗篷和黑色盔甲的战士",
+  "DEMO_ENHANCE_HEADING": "使用 AI 通过编辑和缩放工具转换您的照片。",
+  "DEMO_ENHANCE_UPSCALE_TEXT": "将选定的图像上传到 AI Playground 并设置缩放值",
+  "DEMO_ENHANCE_VARIATION_TEXT": "使用变化滑块为您的图像添加创意。您还可以输入提示为图像添加细节",
+  "DEMO_ENHANCE_IMAGE_PROMPT_TEXT": "输入描述您希望如何设计图像样式的提示",
+  "DEMO_ENHANCE_IMAGE_PROMPT_TEXT_DETAIL": "向左滑动滑块以保留更多原始图像，或向右滑动以更符合您的文本提示",
+  "DEMO_ENHANCE_INPAINT_ONE": "使用画笔工具选择要修复或替换的图像区域。",
+  "DEMO_ENHANCE_INPAINT_TWO": "输入您想要修复或添加到高亮区域的内容。",
+  "DEMO_ENHANCE_INPAINT_THREE": "选择修复或填充，并使用滑块控制结果与原始图像（左）或您的提示（右）的相似程度。",
+  "DEMO_ENHANCE_OUTPAINT_ONE": "描述您希望如何扩展图像",
+  "DEMO_ENHANCE_OUTPAINT_TWO": "使用下面的箭头选择扩展方向",
+  "DEMO_EHNAHCE_OUTPAINT_THREE": "向左滑动滑块以保留更多原始图像，或向右滑动以更符合您的文本提示。",
+  "DEMO_ANSWER_HEADING": "为研究和写作生成 AI 驱动的智能回答。",
+  "DEMO_ANSWER_GENERATE_TEXT": "使用回答选项卡搜索特定信息，或上传文件生成根据您需求定制的摘要见解。",
+  "DEMO_ANSWER_GENERATE_HELP_TEXT": "帮我写一篇关于猫的研究论文...",
+  "DEMO_NEED_HELP": "需要帮助吗？",
+  "DEMO_ENHANCE_IMAGE_TEXT": "输入描述您希望如何设计图像样式的提示",
+  "DEMO_ENHANCE_IMAGE_TEXT_2": "向左滑动滑块以保留更多原始图像，或向右滑动以更符合您的文本提示。",
+  "DEMO_ENHANCE_OUTPAINT_TEXT": "描述您希望如何扩展图像。",
+  "DEMO_ENHANCE_OUTPAINT_TEXT_2": "使用下面的箭头选择扩展方向。",
+  "DEMO_ENHANCE_OUTPAINT_TEXT_3": "向左滑动滑块以保留更多原始图像，或向右滑动以更符合您的文本提示。",
   "RAG_CLEAR_ALL": "清除全部"
 }
