--- a/WebUI/src/assets/i18n/zh-TW.json
+++ b/WebUI/src/assets/i18n/zh-TW.json
@@ -254,6 +254,22 @@
   "DEVICE": "設備",
   "SETTINGS_IMAGE_COMFY_CHECKPOINT_MODEL": "檢查點模型",
   "SETTINGS_IMAGE_COMFY_FRAME_RATE": "幀率",
+  "COM_LOAD_VIDEO": "載入影片",
+  "SETTINGS_MODEL_SD_HD_INPAINT_MODEL": "預設 HD Inpaint/Outpaint 模型",
+  "BACKEND_VERSION_DESCRIPTION_COMFYUI": "輸入 git 提交雜湊或版本標籤（例如 v1.2.3 或 abc1234）",
+  "BACKEND_VERSION_DESCRIPTION_LLAMACPP": "輸入建置編號（例如 b6048）",
+  "BACKEND_VERSION_DESCRIPTION_OPENVINO": "輸入版本號（例如 2025.2.0）",
+  "BACKEND_VERSION_DESCRIPTION_OLLAMA": "輸入發布標籤和版本",
+  "BACKEND_RELEASE_TAG": "發布標籤",
+  "BACKEND_RELEASE_TAG_DESCRIPTION": "輸入發布標籤（例如 v2.3.0-nightly）",
+  "BACKEND_VERSION_DESCRIPTION_OLLAMA_VERSION": "輸入版本號（例如 2.3.0b20250630）",
+
+  "COM_ADD_FILE_TO_RAG": "將檔案新增至可用文件清單",
+  "COM_ADD_FILE_TO_RAG_CHECKBOX": "將檔案新增至/從用於產生回應的文件清單中移除",
+  "COM_CHECK_ALL_FILES": "將所有檔案新增至用於產生回應的文件清單",
+  "COM_UNCHECK_ALL_FILES": "從用於產生回應的文件清單中移除所有檔案",
+  "COM_DELETE_FILE": "從可用文件清單中刪除檔案",
+  "COM_DELETE_ALL_FILES": "清除可用文件清單",
   "SETTINGS_IMAGE_COMFY_TOTAL_FRAMES": "總幀數",
   "ANSWER_MAX_TOKENS": "最大標記數",
   "ANSWER_METRICS": "指標",
@@ -275,5 +291,30 @@
   "BACKEND_SETTINGS_DESCRIPTION": "設定 {backend} 後端的參數。變更可能需要重新啟動或重新安裝才能生效。",
   "BACKEND_VERSION": "版本",
   "BACKEND_VERSION_DESCRIPTION": "用於後端的 Git 參考。這可以是版本標籤或提交雜湊。",
+  "DEMO_OK_GOT_IT": "好的，我明白了",
+  "DEMO_CREATE_CENTER_CONTENT": "在幾秒鐘內將簡單的文字提示轉換為令人驚豔的視覺效果。",
+  "DEMO_CREATE_POPUP_CONTENT_1": "告訴 AI Playground 您希望圖像看起來如何。然後點擊「產生」按鈕。",
+  "DEMO_YOU_COULD_TYPE": "您可以輸入",
+  "DEMO_CREATE_POPUP_CONTENT_3": "頭髮飄逸、紫色斗篷和黑色盔甲的戰士",
+  "DEMO_ENHANCE_HEADING": "使用 AI 透過編輯和縮放工具轉換您的照片。",
+  "DEMO_ENHANCE_UPSCALE_TEXT": "將選定的圖像上傳到 AI Playground 並設定縮放值",
+  "DEMO_ENHANCE_VARIATION_TEXT": "使用變化滑桿為您的圖像增添創意。您也可以輸入提示為圖像增加細節",
+  "DEMO_ENHANCE_IMAGE_PROMPT_TEXT": "輸入描述您希望如何設計圖像樣式的提示",
+  "DEMO_ENHANCE_IMAGE_PROMPT_TEXT_DETAIL": "向左滑動滑桿以保留更多原始圖像，或向右滑動以更符合您的文字提示",
+  "DEMO_ENHANCE_INPAINT_ONE": "使用畫筆工具選擇要修復或替換的圖像區域。",
+  "DEMO_ENHANCE_INPAINT_TWO": "輸入您想要修復或新增到高亮區域的內容。",
+  "DEMO_ENHANCE_INPAINT_THREE": "選擇修復或填充，並使用滑桿控制結果與原始圖像（左）或您的提示（右）的相似程度。",
+  "DEMO_ENHANCE_OUTPAINT_ONE": "描述您希望如何擴展圖像",
+  "DEMO_ENHANCE_OUTPAINT_TWO": "使用下面的箭頭選擇擴展方向",
+  "DEMO_EHNAHCE_OUTPAINT_THREE": "向左滑動滑桿以保留更多原始圖像，或向右滑動以更符合您的文字提示。",
+  "DEMO_ANSWER_HEADING": "為研究和寫作產生 AI 驅動的智慧回答。",
+  "DEMO_ANSWER_GENERATE_TEXT": "使用回答分頁搜尋特定資訊，或上傳檔案產生根據您需求客製化的摘要見解。",
+  "DEMO_ANSWER_GENERATE_HELP_TEXT": "幫我寫一篇關於貓的研究論文...",
+  "DEMO_NEED_HELP": "需要協助嗎？",
+  "DEMO_ENHANCE_IMAGE_TEXT": "輸入描述您希望如何設計圖像樣式的提示",
+  "DEMO_ENHANCE_IMAGE_TEXT_2": "向左滑動滑桿以保留更多原始圖像，或向右滑動以更符合您的文字提示。",
+  "DEMO_ENHANCE_OUTPAINT_TEXT": "描述您希望如何擴展圖像。",
+  "DEMO_ENHANCE_OUTPAINT_TEXT_2": "使用下面的箭頭選擇擴展方向。",
+  "DEMO_ENHANCE_OUTPAINT_TEXT_3": "向左滑動滑桿以保留更多原始圖像，或向右滑動以更符合您的文字提示。",
   "BACKEND_SAVE_CHANGES": "儲存變更"
 }
